# excises

./: 629.hs  Challenge281.java  LICENSE  README.md  arcadeCombo.hs  e292.hs  e293.hs  e294.cabal  e294.hs  evalPrefix.hs  find.hs  findMissing.hs  functor.swift  ipv6parser.hs  kinds1.hs  lcs.hs  list1.agda  peano.hs  sing1.hs  sing2.hs  string2Number.hs  stringPermutations.hs  ttfp1.agda  typefun1.hs
Bin2Text/: Bin2Text.cabal  LICENSE  README.md  stack.yaml
Bin2Text/app/: Main.hs
Bin2Text/src/: ADT.hs  FMT.hs  Tuple.hs  Vec.hs  d2fmt.c
Bin2Text/test/: Spec.hs
Challenge280/src/: Main.java  RealQuick.java
cou/: Makefile  README.md  ccou.c  ccou.h  cou.hs
netcat/: netcat.cabal
netcat/app/: Main.hs
netcat/src/: Netcat.hs
tail/: README.md  tail.cabal
tail/app/: Main.hi  Main.hs
