name:                e294
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/e294#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable e294
  hs-source-dirs:
  main-is:             e294.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5 && < 0.7
                     , aeson >= 1.0 && < 2.0
                     , http-client >= 0.5 && < 1.0
                     , http-client-tls >= 0.3 && < 1.0
                     , servant >= 0.9 && < 1.0
                     , servant-client >= 0.9 && < 1.0
                     , bytestring >= 0.10 && < 0.11
                     , text >= 1.2 && < 1.4
                     , mtl >= 2.2 && < 2.4
                     , hspec >= 2.2 && < 3.0
                     , hspec-core >= 2.2 && < 3.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/e294
