name:                Bin2Text
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wangbj/Bin2Text#readme
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           3-Clause BSD
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ADT, Tuple, Vec, FMT
  build-depends:       QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , async >= 2.1.0
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , cereal >= 0.5.1.0
                     , cereal-conduit >= 0.7.3
                     , chunked-data >= 0.2.0
                     , conduit >= 1.2.6.4
                     , conduit-combinators >= 1.0.3.1
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , either >= 4.4.1
                     , exceptions >= 0.8.2.1
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12.1.0
                     , resourcet >= 1.1.7.3
                     , stm-conduit >= 2.8.0
                     , transformers >= 0.4.2.0
                     , transformers-base >= 0.4.4
                     , vector >= 0.11.0.0
  default-language:    Haskell2010
  c-sources:           cbits/d2fmt.c

executable Bin2Text-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Bin2Text
                     , QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , async >= 2.1.0
                     , base
                     , bytestring >= 0.10.6.0
                     , cereal >= 0.5.1.0
                     , cereal-conduit >= 0.7.3
                     , chunked-data >= 0.2.0
                     , conduit >= 1.2.6.4
                     , conduit-combinators >= 1.0.3.1
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , either >= 4.4.1
                     , exceptions >= 0.8.2.1
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12.1.0
                     , resourcet >= 1.1.7.3
                     , stm-conduit >= 2.8.0
                     , transformers >= 0.4.2.0
                     , transformers-base >= 0.4.4
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

test-suite Bin2Text-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Bin2Text
                     , QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , async >= 2.1.0
                     , base
                     , bytestring >= 0.10.6.0
                     , cereal >= 0.5.1.0
                     , cereal-conduit >= 0.7.3
                     , chunked-data >= 0.2.0
                     , conduit >= 1.2.6.4
                     , conduit-combinators >= 1.0.3.1
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , either >= 4.4.1
                     , exceptions >= 0.8.2.1
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12.1.0
                     , resourcet >= 1.1.7.3
                     , stm-conduit >= 2.8.0
                     , transformers >= 0.4.2.0
                     , transformers-base >= 0.4.4
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/Bin2Text
